# Flutter-EReviewAPP

apps/backend/: .env.local  pyproject.toml  setup.py
apps/backend/app/: db.py  main.py
apps/backend/app/models/: database.py  peer_review.py  points.py  review.py  user.py
apps/backend/app/routers/: auth.py  employer_reviews.py  peer_reviews.py  points.py  realtime.py  users.py
apps/backend/backend.egg-info/: PKG-INFO  SOURCES.txt
apps/backend/performance_review_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/backend/tests/: __init__.py  conftest.py  test_auth.py  test_reviews.py  test_websocket.py
