[project]
name = "pyproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Badger-Jay",email = "jy3287@columbia.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
